--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,8 @@
   --base-dark-grey: #4e4e4e;
   --base-box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 
+  --reverse-bg: var(--base-primary-black);
+
   --page-container-max-width: 1200px;
   --page-bg: var(--base-primary-white);
   --page-text-color: var(--base-primary-black);
@@ -26,6 +28,7 @@
 }
 
 [data-theme="dark"] {
+  --reverse-bg: var(--base-primary-white);
   --page-bg: var(--base-primary-black);
   --page-text-color: var(--base-primary-white);
 
