--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,8 @@
   --page-bg: var(--base-primary-white);
   --page-text-color: var(--base-primary-black);
 
-  --nav-bar-shadow: -1px 10px 19px -8px var(--page-bg);
+  --nav-bar-shadow: 0px 10px 19px -8px var(--page-bg);
+  --overlay-shadow: inset 0px -28px 20px -20px var(--page-bg);
 
   --card-bg: var(--base-secondary-white);
   --card-color: var(--base-secondary-black);
@@ -33,6 +34,7 @@
   --page-text-color: var(--base-primary-white);
 
   --nav-bar-shadow: -1px 10px 19px -8px var(--page-bg);
+  --overlay-shadow: inset 0px -28px 20px -20px var(--page-bg);
 
   --card-bg: var(--base-secondary-black);
   --card-color: var(--base-secondary-white);
@@ -55,6 +57,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 a {
