--- a/styles/globals.css
+++ b/styles/globals.css
@@ -126,6 +126,12 @@ a {
   justify-content: center;
 }
 
+._base-shadow{
+  box-shadow: var(--base-box-shadow);
+  -webkit-box-shadow: var(--base-box-shadow);
+  -moz-box-shadow: var(--base-box-shadow);
+}
+
 ._text-green {
   color: var(--base-green);
 }
