--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,7 @@
   --base-green: #31c95e;
   --base-red: #f86753;
   --base-yellow: #f7b933;
+  --base-blue: #5cb5ff;
   --base-box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 
   --reverse-bg: var(--base-secondary-black);
@@ -144,6 +145,10 @@ a {
   color: var(--base-yellow);
 }
 
+._txt-blue{
+  color: var(--base-blue);
+}
+
 ._bg-green {
   background-color: var(--base-green);
 }
@@ -155,6 +160,11 @@ a {
 ._bg-yellow {
   background-color: var(--base-yellow);
 }
+
+._bg-blue{
+  background-color: var(--base-blue);
+}
+
 
 @keyframes typing {
   from {
